remove perfect scrollbar and fix sidebar
remove perfect scrollbar
fix sidebar

closes #21

--- a/src/assets/scss/spartan/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/spartan/custom/_sidebar-and-main-panel.scss
@@ -615,13 +615,13 @@
 }
 
 
-.perfect-scrollbar-on {
-  .sidebar,
-  .main-panel {
-    height: 100%;
-    max-height: 100%;
-  }
-}
+// .perfect-scrollbar-on {
+//   .sidebar,
+//   .main-panel {
+//     height: 100%;
+//     max-height: 100%;
+//   }
+// }
 
 
 .panel-header {
